--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,8 @@ twitter_link: https://twitter.com/yorkurobotics
 facebook_link: https://www.facebook.com/yorkurobotics/
 linkedin_link: https://www.linkedin.com/company/yurs/
 
+join_now_link: https://forms.gle/iQss3FENRCGWn1iu7
+
 # Build settings
 # theme: minima
 plugins:
