--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,8 +54,12 @@ jobs:
           git config --global user.name 'Ibrahim Abdul Hammed'
           git config --global user.email 'ibrahim74115@gmail.com'
           mv website/_site .
-          git checkout -b gh_pages --track origin/gh_pages
-          cp -r _site/*
+          echo "Was in branch:"
+          git branch
+          git checkout remotes/origin/gh_pages
+          echo "Now in branch:"
+          git branch
+          cp -r _site/* .
           rm -rf _site website node_modules
           git add *
           git commit -m "New changes to website."
