--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,45 +22,49 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-        
-      - name: Setup Ruby enviornment
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.6
+     
+      - name: testing
+        run: git branch -a     
+     
+     
+#       - name: Setup Ruby enviornment
+#         uses: ruby/setup-ruby@v1
+#         with:
+#           ruby-version: 2.6
       
-      - name: Setup Node.js enviornemnt
-        uses: actions/setup-node@v1.4.3
+#       - name: Setup Node.js enviornemnt
+#         uses: actions/setup-node@v1.4.3
       
-      - name: Install yarn
-        run: |
-          curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-          echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-          sudo apt update && sudo apt install yarn
-          yarn --version
+#       - name: Install yarn
+#         run: |
+#           curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+#           echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+#           sudo apt update && sudo apt install yarn
+#           yarn --version
       
-      - name: Install all dependencies
-        run: |
-          cd website && bundle install && cd ..
-          yarn
+#       - name: Install all dependencies
+#         run: |
+#           cd website && bundle install && cd ..
+#           yarn
       
-      - name: Build assets with gulp
-        run: gulp
+#       - name: Build assets with gulp
+#         run: gulp
       
-      - name: Build site with Jekyll
-        run: cd website && exec jekyll build && cd ..
+#       - name: Build site with Jekyll
+#         run: cd website && exec jekyll build && cd ..
       
-      - name: Checkout and push onto gh-pages
-        run: |
-          git config --global user.name 'Ibrahim Abdul Hammed'
-          git config --global user.email 'ibrahim74115@gmail.com'
-          mv website/_site .
-          echo "Was in branch:"
-          git branch
-          git checkout remotes/origin/gh_pages
-          echo "Now in branch:"
-          git branch
-          cp -r _site/* .
-          rm -rf _site website node_modules
-          git add *
-          git commit -m "New changes to website."
-          git push origin gh-pages
+#       - name: Checkout and push onto gh-pages
+#         run: |
+#           git config --global user.name 'Ibrahim Abdul Hammed'
+#           git config --global user.email 'ibrahim74115@gmail.com'
+#           mv website/_site .
+#           echo "Was in branch:"
+#           git branch
+#           git checkout remotes/origin/gh_pages
+#           echo "Now in branch:"
+#           git branch
+#           cp -r _site/* .
+#           rm -rf _site website node_modules
+#           git add *
+#           git commit -m "New changes to website."
+#           git push origin gh-pages
