--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,23 @@ jobs:
       - uses: actions/checkout@v2
      
       - name: testing
-        run: git branch -a     
+        run: |
+          git branch -a
+          ls
+          touch testing.txt
+          echo 'Hello World' > testing.txt
+          ls
+        
+      - name: testing2
+        uses: actions/checkout@v2
+        with:
+          ref: gh-pages
+      
+      - name: testing3
+        run: |
+          git branch -a
+          ls
+             
      
      
 #       - name: Setup Ruby enviornment
