--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,20 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CI/CD
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build-and-deploy:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -22,37 +22,40 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-        
+
       - name: Setup Ruby enviornment
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.7
-      
+
       - name: Setup Node.js enviornemnt
         uses: actions/setup-node@v1.4.3
-      
+
       - name: Install yarn
         run: |
           curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
           echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
           sudo apt update && sudo apt install yarn
           yarn --version
-      
+
       - name: Install all dependencies
         run: |
           cd website && bundle install && cd ..
           yarn
-      
+
       - name: Build assets with gulp
         run: gulp
-      
+
       - name: Build site with Jekyll
         run: cd website && exec jekyll build && cd ..
-    
+
       - name: Prepare for deployment
         run: |
           mkdir public
           cp -r website/_site/* public
+          cd public
+          rm .nojekyll
+          cd ..
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
