--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build-and-deploy:
+  build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -48,16 +48,37 @@ jobs:
 
       - name: Build site with Jekyll
         run: cd website && exec jekyll build && cd ..
-
-      - name: Prepare for deployment
+    
+      - name: Prepare
         run: |
           mkdir public
           cp -r website/_site/* public
           cd public
           cd ..
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Save as an artificat
+        uses: actions/upload-artifact@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+          name: public-website
+          path: ./public  
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    
+    steps:
+      - uses: actions/checkout@v2
+      
+      - name: Download artificat
+        uses: actions/download-artifact@master
+        with:
+          name: public-website
+  
+      - name: Display structure of downloaded files
+        run: ls -R
+
+#       - name: Deploy
+#         uses: peaceiris/actions-gh-pages@v3
+#         with:
+#           github_token: ${{ secrets.GITHUB_TOKEN }}
+#           publish_dir: ./public
