--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -14,6 +14,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Ping my site
-      - uses: Leocardoso94/is-my-site-up@v1.2
+        uses: Leocardoso94/is-my-site-up@v1.2
         with:
           site: https://yorkurobotics.com/
