--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,11 +52,38 @@ jobs:
         uses: actions/upload-artifact@master
         with:
           name: public-website
-          path: ./public  
+          path: ./public 
+  
+  security-testing:
+    runs-on: ubuntu-latest
+    needs: build
+    
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@master
+        with:
+          name: public-website
+          path: ./public 
+
+      - name: Setup Node.js enviornemnt
+        uses: actions/setup-node@v1.4.3
+      
+      - name: Install http-server
+        run: sudo npm install --global http-server
+        
+      - name: Run http-server
+        run: http-server ./public &
+      
+      - name: OWASP ZAP Baseline Scan
+        uses: zaproxy/action-baseline@v0.3.0
+        with:
+          target: http://localhost:8080 
+      
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs:
+      - security-testing
     
     steps:
       - uses: actions/checkout@v2
