--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
   
   security-testing:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build]
     
     steps:
       - name: Download artifact
@@ -79,13 +79,51 @@ jobs:
         with:
           target: http://localhost:8080
           cmd_options: -I  
-      
+  
+  lighthouse-check:
+    runs-on: ubuntu-latest
+    needs: [build]
+    
+    steps:
+      - uses: actions/checkout@v2
+    
+      - name: Download artifact
+        uses: actions/download-artifact@master
+        with:
+          name: public-website
+          path: ./public 
 
+      - name: Setup Node.js enviornemnt
+        uses: actions/setup-node@v1.4.3
+      
+      - name: Install http-server
+        run: sudo npm install --global http-server
+        
+      - name: Run http-server
+        run: http-server ./public &
+
+      - name: Make tempdir for artifacts
+        run: mkdir /tmp/artifacts
+
+      - name: Run Lighthouse
+        uses: foo-software/lighthouse-check-action@master
+        with:
+          accessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
+          author: ${{ github.actor }}
+          outputDirectory: /tmp/artifacts
+          urls: 'http://localhost:8080/,http://localhost:8080/rover,http://localhost:8080/sumobot'
+          sha: ${{ github.sha }}
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@master
+        with:
+          name: Lighthouse reports
+          path: /tmp/artifacts
+   
   deploy:
     runs-on: ubuntu-latest
-    needs:
-      - security-testing
-    
+    needs: [build,lighthouse-check,security-testing]
+
     steps:
       - uses: actions/checkout@v2
       
