Minify HTML, thus adding more gulp.js files

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,6 @@ on:
   workflow_dispatch:
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
 
@@ -35,12 +34,15 @@ jobs:
           cd website && bundle install && cd ..
           yarn
 
-      - name: Build assets with gulp
-        run: gulp
+      - name: Build assets (such as imgs, css, js, etc.) with gulp (pre-build of website)
+        run: gulp --gulpfile pre.web.build.gulpfile.js
 
       - name: Build site with Jekyll
         run: cd website && exec jekyll build && cd ..
-    
+
+      - name: More gulp tasks for minification and optimization (post-build of website)
+        run: gulp --gulpfile post.web.build.gulpfile.js
+
       - name: Prepare
         run: |
           mkdir public
@@ -52,53 +54,53 @@ jobs:
         uses: actions/upload-artifact@master
         with:
           name: public-website
-          path: ./public 
-  
+          path: ./public
+
   security-testing:
     runs-on: ubuntu-latest
     needs: [build]
-    
+
     steps:
       - name: Download artifact
         uses: actions/download-artifact@master
         with:
           name: public-website
-          path: ./public 
+          path: ./public
 
       - name: Setup Node.js enviornemnt
         uses: actions/setup-node@v1.4.3
-      
+
       - name: Install http-server
         run: sudo npm install --global http-server
-        
+
       - name: Run http-server
         run: http-server ./public &
-      
+
       - name: OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.3.0
         with:
           target: http://localhost:8080
-          cmd_options: -I  
-  
+          cmd_options: -I
+
   lighthouse-check:
     runs-on: ubuntu-latest
     needs: [build]
-    
+
     steps:
       - uses: actions/checkout@v2
-    
+
       - name: Download artifact
         uses: actions/download-artifact@master
         with:
           name: public-website
-          path: ./public 
+          path: ./public
 
       - name: Setup Node.js enviornemnt
         uses: actions/setup-node@v1.4.3
-      
+
       - name: Install http-server
         run: sudo npm install --global http-server
-        
+
       - name: Run http-server
         run: http-server ./public &
 
@@ -111,7 +113,7 @@ jobs:
           accessToken: ${{ secrets.GITHUB_TOKEN }}
           author: ${{ github.actor }}
           outputDirectory: /tmp/artifacts
-          urls: 'http://localhost:8080/,http://localhost:8080/rover,http://localhost:8080/sumobot'
+          urls: "http://localhost:8080/,http://localhost:8080/rover,http://localhost:8080/sumobot"
           sha: ${{ github.sha }}
 
       - name: Upload artifacts
@@ -119,35 +121,35 @@ jobs:
         with:
           name: Lighthouse reports
           path: /tmp/artifacts
-          
-  html5-validation-testing:
-     runs-on: ubuntu-latest
-     needs: [build]
-     
-     steps:
-       - name: Download artifact
-         uses: actions/download-artifact@master
-         with:
-           name: public-website
-           path: ./public  
 
-       - name: HTML5 Validation
-         uses: Cyb3r-Jak3/html5validator-action@v0.4.2
-         with:
-           root: ./public 
-   
-  deploy:
+  html5-validation-testing:
     runs-on: ubuntu-latest
-    needs: [build,lighthouse-check,security-testing,html5-validation-testing]
+    needs: [build]
 
     steps:
-      - uses: actions/checkout@v2
-      
       - name: Download artifact
         uses: actions/download-artifact@master
         with:
           name: public-website
-          path: ./public  
+          path: ./public
+
+      - name: HTML5 Validation
+        uses: Cyb3r-Jak3/html5validator-action@v0.4.2
+        with:
+          root: ./public
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build, lighthouse-check, security-testing, html5-validation-testing]
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Download artifact
+        uses: actions/download-artifact@master
+        with:
+          name: public-website
+          path: ./public
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
