Potential speed up of bundle install

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Install all dependencies
         run: |
-          cd website && bundle install && cd ..
+          cd website && bundle install --jobs=10 && cd ..
           yarn
 
       - name: Build assets (such as imgs, css, js, etc.) with gulp (pre-build of website)
