Add sitemap and robots.xml

--- a/website/_config.yml
+++ b/website/_config.yml
@@ -40,7 +40,7 @@ join_now_link: /join
 # Build settings
 # theme: minima
 plugins:
-  - jekyll-feed
+  - jekyll-sitemap
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
