--- a/website/_config.yml
+++ b/website/_config.yml
@@ -29,10 +29,10 @@ url: "https://yorkurobotics.com" # the base hostname & protocol for your site, e
 twitter_username: jekyllrb
 github_username: jekyll
 
-instagram_link: https://www.instagram.com/yorkurobotics
-twitter_link: https://twitter.com/yorkurobotics
-facebook_link: https://www.facebook.com/yorkurobotics/
-linkedin_link: https://www.linkedin.com/company/yurs/
+instagram_link: /instagram
+twitter_link: /twitter
+facebook_link: /facebook
+linkedin_link: /linkedin
 
 # join_now_link: https://forms.gle/iQss3FENRCGWn1iu7
 join_now_link: /join
