--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,15 +12,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2.3.4
 
       - name: Setup Ruby enviornment
-        uses: ruby/setup-ruby@v1
+        uses: ruby/setup-ruby@v1.51.1
         with:
           ruby-version: 2.7
 
       - name: Setup Node.js enviornemnt
-        uses: actions/setup-node@v1.4.3
+        uses: actions/setup-node@v1.4.4
 
       - name: Install yarn
         run: |
@@ -54,7 +54,7 @@ jobs:
           cd ..
 
       - name: Save as an artifact
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@v2
         with:
           name: public-website
           path: ./public
@@ -65,13 +65,13 @@ jobs:
 
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@master
+        uses: actions/download-artifact@v2
         with:
           name: public-website
           path: ./public
 
       - name: Setup Node.js enviornemnt
-        uses: actions/setup-node@v1.4.3
+        uses: actions/setup-node@v1.4.4
 
       - name: Install http-server
         run: sudo npm install --global http-server
@@ -80,7 +80,7 @@ jobs:
         run: http-server ./public &
 
       - name: OWASP ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.3.0
+        uses: zaproxy/action-baseline@v0.4.0
         with:
           target: http://localhost:8080
           cmd_options: -I
@@ -90,16 +90,16 @@ jobs:
     needs: [build]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2.3.4
 
       - name: Download artifact
-        uses: actions/download-artifact@master
+        uses: actions/download-artifact@v2
         with:
           name: public-website
           path: ./public
 
       - name: Setup Node.js enviornemnt
-        uses: actions/setup-node@v1.4.3
+        uses: actions/setup-node@v1.4.4
 
       - name: Install http-server
         run: sudo npm install --global http-server
@@ -111,7 +111,7 @@ jobs:
         run: mkdir /tmp/artifacts
 
       - name: Run Lighthouse
-        uses: foo-software/lighthouse-check-action@master
+        uses: foo-software/lighthouse-check-action@2.0.5
         with:
           accessToken: ${{ secrets.GITHUB_TOKEN }}
           author: ${{ github.actor }}
@@ -120,7 +120,7 @@ jobs:
           sha: ${{ github.sha }}
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@v2
         with:
           name: Lighthouse reports
           path: /tmp/artifacts
@@ -131,31 +131,31 @@ jobs:
 
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@master
+        uses: actions/download-artifact@v2
         with:
           name: public-website
           path: ./public
 
       - name: HTML5 Validation
-        uses: Cyb3r-Jak3/html5validator-action@v0.4.2
+        uses: Cyb3r-Jak3/html5validator-action@v0.4.3
         with:
           root: ./public
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [build, lighthouse-check, security-testing, html5-validation-testing]
+    needs: [build, security-testing, html5-validation-testing]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2.3.4
 
       - name: Download artifact
-        uses: actions/download-artifact@master
+        uses: actions/download-artifact@v2
         with:
           name: public-website
           path: ./public
 
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v3.7.3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
