--- a/redirects.yaml
+++ b/redirects.yaml
@@ -66,3 +66,13 @@ elegoo:
 yfs:
   title: Sponsor - YFS
   url: https://www.yfs.ca/
+  
+ # Miscellaneous
+
+promovideo:
+  title: Promo Video
+  url: https://www.youtube.com/watch?v=3IPfEFFCeAA
+  
+adam:
+  title: Adam's Zoom Room
+  url: https://www.youtube.com/watch?v=dQw4w9WgXcQ
