--- a/redirects.yaml
+++ b/redirects.yaml
@@ -16,12 +16,11 @@ join:
 
 eecszoom:
   title: EECS Zoom
-  url: https://yorku.zoom.us/j/8657684154
+  url: https://yorku.zoom.us/j/7466721300?pwd=cE9QZ0o4RHo5ZWtXM0ZMSVNDYWFHdz09
 
 roverteamzoom:
   title: Rover Team Zoom
-  url: https://yorku.zoom.us/j/8657684154
-  
+  url: https://yorku.zoom.us/j/8657684154 
   
 # Socials
 
