--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -144,6 +144,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [build, security-testing, html5-validation-testing]
+    if: github.ref == 'refs/heads/main'
 
     steps:
       - uses: actions/checkout@v2.3.4
