--- a/redirects.yaml
+++ b/redirects.yaml
@@ -20,7 +20,11 @@ eecszoom:
 
 roverteamzoom:
   title: Rover Team Zoom
-  url: https://yorku.zoom.us/j/8657684154 
+  url: https://yorku.zoom.us/j/8657684154
+  
+mechzoom:
+  title: Mech Team Zoom
+  url: https://yorku.zoom.us/j/99979439564
   
 # Socials
 
