--- a/redirects.yaml
+++ b/redirects.yaml
@@ -26,6 +26,10 @@ mechzoom:
   title: Mech Team Zoom
   url: https://yorku.zoom.us/j/99979439564
   
+getstartedeecs:
+  title: Get Started (EECS Team)
+  url: https://github.com/YorkURobotics/yurs-rover-software-dev-guide
+  
 # Socials
 
 instagram:
