--- a/redirects.yaml
+++ b/redirects.yaml
@@ -30,6 +30,10 @@ roverteamzoom:
   title: Rover Team Zoom
   url: https://yorku.zoom.us/j/8657684154
   
+sumobotzoom:
+  title: Sumobot Team Zoom
+  url: https://yorku.zoom.us/j/99472337919?pwd=MUVFenpUZ3pLSytRVlhSRkRhOXE3UT09
+  
 mechzoom:
   title: Mech Team Zoom
   url: https://yorku.zoom.us/j/99979439564
