--- a/redirects.yaml
+++ b/redirects.yaml
@@ -62,7 +62,7 @@ linkedin:
   
 promovideo:
   title: Promo Video
-  url: https://www.youtube.com/watch?v=3IPfEFFCeAA
+  url: https://www.youtube.com/watch?v=4tx1A3J4d18
 
 # Sponsors
  
