Changing discord link to send to #rules

--- a/redirects.yaml
+++ b/redirects.yaml
@@ -4,11 +4,11 @@ zoom:
 
 slack:
   title: Discord
-  url: https://discord.gg/tE2kHkD8TF
+  url: https://discord.gg/hQmKnwCQSk
  
 discord:
   title: Discord
-  url: https://discord.gg/tE2kHkD8TF
+  url: https://discord.gg/hQmKnwCQSk
 
 fusion360:
   title: Fusion 360
